<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="300dp"
              android:layout_height="90dp"
              android:orientation="horizontal"
              android:padding="5dp">
    <ImageView android:id="@+id/balldetails_image"
               android:layout_width="80dp"
               android:layout_height="80dp"
               android:contentDescription="@string/app_name"
               android:padding="2dp"/>
    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent">
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:padding="2dp">
            <TextView android:layout_width="100dp"
                      android:layout_height="wrap_content"
                      android:padding="2dp"
                      android:textSize="11sp"
                      android:text="@string/sprunghoehe_long"/>
            <TextView android:id="@+id/balldetails_sprunghoehe"
                      android:layout_width="20dp"
                      android:layout_height="wrap_content"
                      android:padding="2dp"
                      android:textSize="11sp"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:padding="2dp">
            <TextView android:layout_width="100dp"
                      android:layout_height="wrap_content"
                      android:padding="2dp"
                      android:textSize="11sp"
                      android:text="@string/haerte_long"/>
            <TextView android:id="@+id/balldetails_haerte"
                      android:layout_width="20dp"
                      android:layout_height="wrap_content"
                      android:padding="2dp"
                      android:textSize="11sp"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:padding="2dp">
            <TextView android:layout_width="100dp"
                      android:layout_height="wrap_content"
                      android:padding="2dp"
                      android:textSize="11sp"
                      android:text="@string/gewicht_long"/>
            <TextView android:id="@+id/balldetails_gewicht"
                      android:layout_width="20dp"
                      android:layout_height="wrap_content"
                      android:padding="2dp"
                      android:textSize="11sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>