<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="0dp">
    <TextView android:id="@+id/balllist_item_fullname"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="2dp"
              android:textSize="14sp" >
    </TextView>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="0dp" >
        <TextView android:layout_width="20dp"
                  android:layout_height="wrap_content"
                  android:padding="2dp"
                  android:textSize="11sp"
                  android:text="@string/sprunghoehe" />
        <TextView android:id="@+id/balllist_item_sprunghoehe"
                  android:layout_width="20dp"
                  android:layout_height="wrap_content"
                  android:padding="2dp"
                  android:textSize="11sp" />
        <TextView android:layout_width="20dp"
                  android:layout_height="wrap_content"
                  android:padding="2dp"
                  android:textSize="11sp"
                  android:text="@string/haerte" />
        <TextView android:id="@+id/balllist_item_haerte"
                  android:layout_width="20dp"
                  android:layout_height="wrap_content"
                  android:padding="2dp"
                  android:textSize="11sp" />
        <TextView android:layout_width="20dp"
                  android:layout_height="wrap_content"
                  android:padding="2dp"
                  android:textSize="11sp"
                  android:text="@string/gewicht" />
        <TextView android:id="@+id/balllist_item_gewicht"
                  android:layout_width="20dp"
                  android:layout_height="wrap_content"
                  android:padding="2dp"
                  android:textSize="11sp" />
    </LinearLayout>
</LinearLayout>